<resources>
    <string name="app_name">Enjaz Zone🏆</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="launcher_name">Enjaz Zone🏆</string>
    <!--    <string name="launcher_name2">Sam\'s To-do List</string>-->
    <string name="to_do">To-Do</string>
    <string name="to_do_list">To-Do Lists</string>
    <string name="calendar_appointments_later_tasks">Calendar(Appointments &amp; Later Tasks)</string>
    <string name="calendar">Calendar</string>
    <string name="tasks_view">Tasks View</string>
    <string name="user_profile">User Profile</string>
    <string name="send_button">Send Button</string>
    <string name="enter_a_task_hint">Any tasks to write down for Today?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification_channel_description">"Number of current all tasks is: "</string>
    <string name="notification_header">Notification</string>
    <string name="notification_title">Reminder Notification</string>
    <string name="notification_message">"The Number of all tasks is: "</string>
    <string name="message_after_logging">Logged in</string>
    <string name="login_failure_message">"Error: "</string>
    <string name="login_cancel">Login Error: login cancelled</string>
    <string name="login_success_result">"Login result: "</string>
    <string name="username_and_password_cannot_be_empty">Error: Email or Password can\'t be empty</string>
    <string name="signup_failure">"Error: "</string>
    <string name="signup_cancelled">Login Error: signup cancelled</string>
    <string name="signup_success">Navigating to: login page</string>
    <string name="created_in">"Created in: "</string>
    <string name="task_number">Task #</string>
    <string name="details">" Details:"</string>
    <string name="new_task_in_details">New Task In Details:</string>
    <string name="task_title_changes_saved">Task title changes are saved</string>
    <string name="task_description_changes_saved">Task description changes are saved</string>
    <string name="edit_saved_check">Edit saved ✔</string>
    <string name="selected_due_date">"Selected Due Date is: "</string>
    <string name="selected_starting_hour">"Selected Starting Hour is: "</string>
    <string name="selected_ending_hour">"Selected Ending Hour is: "</string>
    <string name="alert_dialog_message">Delete this task? (deletion cannot be undone)</string>
    <string name="alert_dialog_title">Task Delete Conformation</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="all_tasks">All Tasks (</string>
    <string name="due_date_sorted">") \"due-date\" sorted:"</string>
    <string name="task_Description">Task description.</string>
    <string name="this_hour">(This Hour)</string>
    <string name="today">" (Today)"</string>
    <string name="tomorrow">(Tomorrow)</string>
    <string name="this_week">(This Week)</string>
    <string name="upcoming_week_and_more">(Upcoming week+)</string>
    <string name="past_due_date">(Past due date)</string>
    <string name="enjaz_hours">Enjaz Hours</string>
    <string name="sleeping_time">Sleeping Time</string>
    <string name="time_remaining">Time remaining until bedtime hours</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="edit_button_pressed">"Edit Button" has been pressed!</string>
    <string name="share_task">"a Task that's in the schedule: "</string>
    <string name="selected_bedtime_hour">"Selected bedtime hour: "</string>
    <string name="selected_wakeup_hour">"Selected wakeup hour: "</string>
    <string name="alert_dialog_message_logout">ِAre you sure you want to logout?</string>
    <string name="alert_dialog_title_logout">Logout Conformation</string>

    <string name="waiting_for_the_notification">Waiting for the notification…</string>
    <string name="description">Description</string>
    <string name="save_changes">Save Changes</string>
    <string name="pick_due_date">Pick Due Date</string>
    <string name="pick_starting_hour">Pick Starting Hour</string>
    <string name="pick_ending_hour">Pick Ending Hour</string>
    <string name="delete_task">Delete Task</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_signed_up_login">Already signed up? Login</string>
    <string name="timer_header">Timer Header</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="digital_clock">Digital Clock</string>
    <string name="bedtime_schedule">Bedtime schedule</string>
    <string name="get_in_bed">Get in bed</string>
    <string name="wake_up">Wake up</string>
    <string name="logout">Logout</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
</resources>